kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auctions-deployment
  namespace: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auctions
  template:
    metadata:
      labels:
        app: auctions
    spec:
      containers:
        - name: auctions
          image: gcr.io/reasoned-project-01/ex_auction:79fecf4
          imagePullPolicy: "Always"
          resources:
            limits:
              memory: "512Mi"
              cpu: "256m"
          ports:
            - containerPort: 8080
            - containerPort: 8081
            - containerPort: 8082
          volumeMounts:
            - name: reasoned-postgres-certs
              mountPath: "/etc/reasoned-postgres-certs"
              readOnly: true
          livenessProbe:
            httpGet:
              path: /live
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 2
      restartPolicy: "Always"
      volumes:
        - name: reasoned-postgres-certs
          secret:
            secretName: reasoned-postgres-certs
---
apiVersion: v1
kind: Service
metadata:
  name: auctions-service
  namespace: test
spec:
  selector:
    app: auctions
  type: NodePort
  ports:
    - name: ex-gate
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: ex-auctions-manager
      protocol: TCP
      port: 8081
      targetPort: 8081
    - name: ex-auctions-admin
      protocol: TCP
      port: 8082
      targetPort: 8082
